# wasm-service-worker

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  biome.jsonc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: pipeline.yml
src/: lib.rs  main.ts  sw.ts
templates/: base.html  form.html  hello.html  hello_partial.html
