[package]
name = "wasm-service-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3.82"
axum = { version = "0.8.6", default-features = false, features = ["form"] }
http = "1.3.1"
tower-service = "0.3.3"
http-serde = "2.1.1"

[dependencies.web-sys]
version = "0.3.82"
features = [
    "Cache",
    "CacheStorage",
    "Client",
    "Clients",
    "ExtendableEvent",
    "ExtendableMessageEvent",
    "FetchEvent",
    "Headers",
    "Location",
    "MessageEvent",
    "Navigator",
    "Node",
    "RegistrationOptions",
    "Request",
    "RequestInit",
    "Response",
    "ResponseInit",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "Url",
    "Window",
    "console",
]

[profile.release]
strip = true
lto = true
